# leaptime-manager

./: .gitignore  MANIFEST.in  README.md  app-backup.py  data-backup.py  generate_desktop_files  index.html  meson.build  pyproject.toml  pyproject.toml.new  setup.cfg  setup.py  test  update-pot
.github/workflows/: ci.yml  codeql-analysis.yml  publish-deb.yml
data/: leaptime-manager.desktop.in  meson.build  org.mamolinux.leaptime-manager.gschema.xml.in
data/applications/: leaptime-manager.desktop
debian/: README.Debian  README.source  changelog  control  copyright  leaptime-manager.1  leaptime-manager.doc-base  postinst  postrm  py3dist-overrides  requires.txt  rules
docs/: LeaptimeManager.rst  conf.py  index.rst  modules.rst
po/: POTFILES  POTFILES.in  leaptime-manager.pot
src/: leaptime-manager.in  meson.build
src/LeaptimeManager/: about_window.py  appBackup.py  appBackup_backend.py  cli_args.py  common.py  dataBackup.py  dataBackup_backend.py  database_rw.py  dialogs.py  gui.py  logger.py  main.py  meson.build  scheduler.py  tarball_backend.py
src/LeaptimeManager/ui/: MainWindow.ui  app_backup.ui  leaptime-manager.ui  logger.ui  system_data.ui  user_data.ui
test/: test
usr/lib/leaptime-manager/: app-backup.py  appBackup.py  data-backup.py  leaptime-manager.py
usr/share/applications/: leaptime-manager.desktop
usr/share/applications/kde4/: leaptime-manager.desktop
usr/share/glib-2.0/schemas/: org.x.leaptime-manager.gschema.xml
usr/share/leaptime-manager/: MainWindow.ui  leaptime-manager.ui
