[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leaptime-manager"
authors = [
	{name = "Himadri Sekhar Basu", email = "hsb10@iitbbs.ac.in"},
]
description = "All-in-one GUI based backup manager"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.6"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: X11 Applications :: GTK",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved",
  " :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Administration",
]
dependencies = [
	"aptdaemon",
	"configobj",
	"PyGObject",
	"python-apt",
	"setproctitle",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://hsbasu.github.io/leaptime-manager"
Repository = "https://www.github.com/mamolinux/leaptime-manager.git"
Issues = "https://www.github.com/mamolinux/leaptime-manager/issues"

[project.scripts]
leaptime-manager = "LeaptimeManager.main:start_LTMCli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.ui"]

[tool.setuptools.dynamic]
version = {file = "src/LeaptimeManager/VERSION"}
