[metadata]
name = leaptime-manager
version = file: src/LeaptimeManager/VERSION
author = Himadri Sekhar Basu
author_email = hsb10@iitbbs.ac.in
description = All-in-one GUI based backup manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/mamolinux/leaptime-manager
project_urls =
    Bug Tracker = https://www.github.com/mamolinux/leaptime-manager/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: X11 Applications :: GTK
    Intended Audience :: End Users/Desktop
    License :: OSI Approved
     :: GNU General Public License v2 or later (GPLv3+)
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Administration

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.package_data]
* = *VERSION, *ui

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    leaptime-manager = LeaptimeManager.main:start_LTMCli

[build_i18n]
domain=leaptime-manager
desktop_files=[("share/applications", ("data/leaptime-manager.desktop.in",
                                      ))]
schemas_files=[("share/glib-2.0/schemas", 
                 ("data/org.mamolinux.leaptime-manager.gschema.xml.in",))
              ]
